--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
+    "react-share": "^3.0.0",
     "react-twitter-embed": "^2.0.8"
   },
   "scripts": {
